[gd_scene load_steps=18 format=2]

[ext_resource path="res://camera/camera_button.png" type="Texture" id=1]
[ext_resource path="res://camera/camera_button_current.png" type="Texture" id=2]
[ext_resource path="res://camera/camera_01.png" type="Texture" id=3]
[ext_resource path="res://rooms/hallway_the_office.jpg" type="Texture" id=4]
[ext_resource path="res://camera/camera_02.png" type="Texture" id=5]
[ext_resource path="res://CameraTest.gd" type="Script" id=6]
[ext_resource path="res://camera/static_4.jpg" type="Texture" id=7]
[ext_resource path="res://camera/static_6.jpg" type="Texture" id=8]
[ext_resource path="res://camera/static_7.jpg" type="Texture" id=9]
[ext_resource path="res://camera/static_1.jpg" type="Texture" id=10]
[ext_resource path="res://camera/static_2.jpg" type="Texture" id=11]
[ext_resource path="res://camera/static_8.jpg" type="Texture" id=12]
[ext_resource path="res://camera/static_5.jpg" type="Texture" id=13]
[ext_resource path="res://camera/static_3.jpg" type="Texture" id=14]
[ext_resource path="res://camera/monitor_lower.png" type="Texture" id=15]
[ext_resource path="res://camera/monitor_fullscreen.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )
default_camera = "hallway_the_office"

[node name="Camera" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 180, 1920, 1080 )

[node name="Static" type="AnimatedSprite" parent="Camera"]
visible = false
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )

[node name="StaticFadeoutTween" type="Tween" parent="Camera"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cameras" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HallwayTheOffice" type="TextureButton" parent="UI/Cameras"]
margin_left = 1308.0
margin_top = 784.0
margin_right = 1478.0
margin_bottom = 897.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI/Cameras/HallwayTheOffice"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 19.0
margin_right = -17.0
margin_bottom = -19.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HallwayStorageRoom" type="TextureButton" parent="UI/Cameras"]
margin_left = 1586.0
margin_top = 784.0
margin_right = 1756.0
margin_bottom = 897.0
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI/Cameras/HallwayStorageRoom"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 19.0
margin_right = -17.0
margin_bottom = -19.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paths" type="Node2D" parent="UI"]

[node name="Line2D" type="Line2D" parent="UI/Paths"]
points = PoolVector2Array( 1478, 842, 1588.85, 842 )
default_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="FullscreenMonitor" type="TextureButton" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -128.0
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource( 16 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerMonitor" type="TextureRect" parent="UI"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -128.0
texture = ExtResource( 15 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UI/FullscreenMonitor" to="." method="_on_FullscreenMonitor_pressed"]
[connection signal="mouse_entered" from="UI/LowerMonitor" to="." method="_on_LowerMonitor_mouse_entered"]
[connection signal="mouse_exited" from="UI/LowerMonitor" to="." method="_on_LowerMonitor_mouse_exited"]
